--- a/src/style.scss
+++ b/src/style.scss
@@ -3,6 +3,7 @@
 	
 	.navigation-container {
 		padding: 10px;
+		padding-right: 0;
 		text-align: right;
 		position: absolute;
 		top: -80px;
@@ -79,4 +80,37 @@
 		}
 	  }
 	}
+}
+
+#editor {
+	.wp-block-squareonesoftware-demo-carousel {
+		.carousel-container {
+			position: relative;
+			overflow: visible; // Show all slides in editor
+			max-width: 100% !important;
+			padding: 20px;
+			border: 1px solid;
+		  }
+		  .block-editor-block-list__block {
+			margin-bottom: 10px;
+		  }
+	}
+}
+
+@media (max-width: 760px) {
+	.wp-block-squareonesoftware-demo-carousel {
+		.carousel-slide {
+			width: 74.0740740741% !important;
+			user-select: none;
+			-webkit-user-select: none;
+			cursor: grab;
+		}
+		.carousel-slide:active {
+			cursor: grabbing;
+		}
+		.navigation-container {
+			display: none;
+		}
+	}
+
 }
