Ads column layout to admin view

--- a/src/carousel/style.scss
+++ b/src/carousel/style.scss
@@ -85,13 +85,17 @@
 		.carousel-container {
 			position: relative;
 			overflow: visible; // Show all slides in editor
-			max-width: 100% !important;
 			padding: 20px;
 			border: 1px solid;
 		  }
 		  .block-editor-block-list__block {
 			margin-bottom: 10px;
 		  }
+	}
+	.wp-block-squareonesoftware-demo-carousel > .carousel-container > .block-editor-inner-blocks > .block-editor-block-list__layout {
+		display: grid !important;
+		grid-template-columns: repeat(var(--columns), 1fr);
+		gap: 10px;
 	}
 }
 
